--- a/docs/sources/obdh.tex
+++ b/docs/sources/obdh.tex
@@ -136,9 +136,8 @@ python gs.py
 \end{enumerate}
 A sample of the telemetry messages received at the ground station is shown in figure~\ref{fig:gs-output}. The command ``exit'' terminates the execution of the ground station script.
 
-\begin{figure}[h]
+\begin{figure}[hbt!]
             \centering{\includegraphics[width=0.6\textwidth,keepaspectratio]{gs-output.png}}
             \caption{Sample telemetry messages received at the GS script.}
             \label{fig:gs-output}
 \end{figure}
-
