--- a/docs/sources/manual.tex
+++ b/docs/sources/manual.tex
@@ -33,12 +33,17 @@
 \usepackage{theorem}
 \usepackage{listings}
 
+\usepackage{parskip}
+\usepackage{fancyvrb}
+
 \definecolor{mGreen}{rgb}{0,0.6,0}
 \definecolor{mGray}{rgb}{0.5,0.5,0.5}
 \definecolor{mPurple}{rgb}{0.58,0,0.82}
 %\definecolor{mPurple}{rgb}{101, 41, 128}
 \definecolor{backgroundColour}{rgb}{255,255,255}
 % \definecolor{orangered}{RGB}{239,134,64}
+\definecolor{mRedBrown}{RGB}{168, 10, 10}
+\definecolor{mOrangered}{RGB}{239,134,64}
 
 %\lstset{inputpath=code/}
 %\lstdefinestyle{CStyle}{
@@ -144,6 +149,17 @@
 \setcounter{table}{0}
 \renewcommand{\chaptername}{Final project}
 \include{obdh}
+\renewcommand{\chaptername}{Written assignment}
+\include{students}
+
+%----------------------------------------------------------------------
+\cleardoublepage
+%%\addcontentsline{toc}{section}{\protect\textbf{Appendices}}
+\appendix
+%%\begin{appendices}
+\include{temperature}
+%%\end{appendices}
+
 %----------------------------------------------------------------------
 %\cleardoublepage
 %%\addcontentsline{toc}{section}{\protect\textbf{Appendices}}
