--- a/docs/sources/assignment5.tex
+++ b/docs/sources/assignment5.tex
@@ -108,9 +108,9 @@ To exit the application, type CTRL-A and then SHIFT-K.
 The software architecture is similar to the previous project, except that the display is replaced by a serial line handler adapted from the examples in the Ada Drivers Library.
 
 
-\begin{figure}[h]
-            \centering{\includegraphics[width=0.8\textwidth,keepaspectratio]{distributed.png}}
-            \caption{Software architecture of distributed housekeeping system.}
+\begin{figure}[hbtp!]
+            \centering{\includegraphics[width=0.9\textwidth,keepaspectratio]{distributed.png}}
+            \caption{Software architecture of the distributed housekeeping system.}
             \label{fig:distributed}
 \end{figure}
 
