--- a/docs/sources/students.tex
+++ b/docs/sources/students.tex
@@ -3,15 +3,15 @@
 \markboth{WRITTEN ASSIGNMENT}{DOCUMENTED REPORT}
 
 Students have to write a brief report of about 2-4 pages
-on the work carried out during the session.
-This report must include:
+on the work carried out during these sessions.
+The report should include:
 
 \begin{itemize}
 	\item An analysis about cross-development environment for embedded systems and the main differences with a native environment.
-	\item The schedulabilty analysis proposed in section~\ref{sc:ta}.
+	\item Optionally, the schedulabilty analysis proposed in section~\ref{sc:ta}.
 	\item The results from the ACS PIL simulation as shown in figure~\ref{fig:scope}.
 	\item The report can contain recommendations to improve the assignment and personal opinions.
-	\item If you have made the changes proposed in the assignments (or any other), you should include them in the report and upload the source code as well.
+	\item Optionally, if you have made the changes proposed in the assignments (or any other), you should include them in the report.
 \end{itemize}
 
 This report must be uploaded in a dedicated assignment from the Moodle platform.
