Docs: Fix URL + update slides figs

--- a/docs/sources/assignment3.tex
+++ b/docs/sources/assignment3.tex
@@ -79,7 +79,7 @@ The implementation code, as initially provided to the students, can be downloade
 		top=5pt,
 		]
 		\centering
-		\color{blue}{\url{https://github.com/STR-UPM/SEU-OBDH-Lab}}
+		\color{blue}{\url{https://github.com/STR-UPM/OBDH_LABS}}
 	\end{tcolorbox}
 \end{center}
 
