--- a/docs/sources/manual.tex
+++ b/docs/sources/manual.tex
@@ -155,11 +155,11 @@
 \include{students}
 
 %----------------------------------------------------------------------
-\cleardoublepage
+%%\cleardoublepage
 %%\addcontentsline{toc}{section}{\protect\textbf{Appendices}}
-\appendix
+%%\appendix
 %%\begin{appendices}
-\include{temperature}
+%%\include{temperature}
 %%\end{appendices}
 
 %----------------------------------------------------------------------
